apps/app-1/versions/v1-1-0/base/route-version.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: app-1-something-v1-1-0
  namespace: app-1
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: gateway
  hostnames:
  - "app-1.gateway.american-broomstick.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1.1.0
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - kind: Service
      name: something-v1-1-0
      namespace: app-1
      port: 8080
